added sendgrid to send the mail to user

--- a/app/views/staticpages/contact.html.erb
+++ b/app/views/staticpages/contact.html.erb
@@ -1,5 +1,11 @@
-<h1> contact page</h1>
+<address>
+  <Strong>  myactionboard.com</Strong> <br>
+  1355 Market Street, Suite 900 <br>
+  San Francisco, CA 94103 <br>
+  <abbr title="Phone">P:</abbr> (044) 456-7890
+</address>
 
-<p> contact no  </p>
-
-<p>  address </p>
+<address>
+  <strong>Email id</strong><br>
+  <a href="mailto:#">myactionboar@gmail.com</a>
+</address>
