--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,3 +35,53 @@ textarea {
 .center h1 {
   margin-bottom: 10px;
 }
+body {
+  padding-top: 60px;
+}
+
+section {
+  overflow: auto;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.center {
+  text-align: center;
+}
+
+.center h1 {
+  margin-bottom: 10px;
+}
+
+input,textarea {
+
+  border: 1px solid #bbb;
+  width:100%;
+  margin-bottom: 15px;
+  height: 100%;
+}
+
+header ul li
+{
+  float :right;
+  margin-left: 20px;
+}
+
+footer {
+  margin-top : 300px;
+  padding-top: 5px;
+  border-top: 15px solid #87CEFA;
+  color:blue;
+}
+
+footer ul {
+  float :right;
+  list-style: none;
+}
+
+footer ul li {
+  float :left;
+  margin-left :20px;
+}
