--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,73 @@
 
 
 
+.microposts {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
+.user {
+  list-style: none;
+  margin: 0;
+
+  li {
+    overflow: auto;
+    padding: 10px;
+    border-bottom: 1px solid lightgray;
+  }
+}
+
+.content {
+  display: block;
+  margin-left: 60px;
+  img {
+    display: block;
+    padding: 5px 0;
+  }
+}
+
+.timestamp {
+  color: lightgray;
+  display: block;
+  margin-left: 60px;
+}
+
+.gravatar {
+  float: left;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+
+.aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+
+  }
+}
+
+
+span.picture {
+  margin-top: 10px;
+  input {
+     border: 0;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
