--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -1,11 +1,20 @@
+<% if logged_in %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info %>
+      </section>
+    </aside>
+  </div>
+<% else %>
 <div class="jumbotron">
   <h1> welcome to the sample app </h1>
-
   <h2 >
     this is the sample page
   </h2>
-
-
   <%= link_to "Sign up now!", new_user_path, class: "btn btn-lg btn-primary" %>
-
 </div>
+
+<% end %>
+
+
