--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "Home", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",    root_path %></li>
@@ -16,7 +16,13 @@
               <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Log out", logout_path, method: :delete %>
+                <%= link_to "Log Out", logout_path, method: :delete %>
+              </li>
+              <li>
+                <%= link_to "All the tweets", microposts_path %>
+              </li>
+              <li>
+                <%= link_to "create post", new_micropost_path %>
               </li>
             </ul>
           </li>
